--- a/ExcelOutput/RaidConfig.json
+++ b/ExcelOutput/RaidConfig.json
@@ -3825,6 +3825,7 @@
     "RaidDesc": {
       "Hash": -574358697
     },
+    "FinishEntranceID": 2041201,
     "BuffDesc": {
       "Hash": 371857150
     },
@@ -3845,8 +3846,8 @@
     "MainMissionIDList": [
       1040107
     ],
-    "MainMissionIDBefore": 1040107,
-    "MainMissionIDAfter": 1040107,
+    "MainMissionIDBefore": 1040106,
+    "MainMissionIDAfter": 1040106,
     "SkipRewardOnFinish": true,
     "EntrancePageBGImagePath": "",
     "AutoObtainDamageType": true,
