--- a/ExcelOutput/ShopGoodsConfig.json
+++ b/ExcelOutput/ShopGoodsConfig.json
@@ -8003,6 +8003,30 @@
     "ScheduleDataID": 10359007
   },
   {
+    "GoodsID": 359008,
+    "ItemID": 140542,
+    "ItemCount": 1,
+    "CurrencyList": [
+      2
+    ],
+    "CurrencyCostList": [
+      25000
+    ],
+    "GoodsSortID": 8,
+    "LimitType1": "ItemNum",
+    "LimitValue1List": [
+      1
+    ],
+    "LimitValue2List": [],
+    "OnShelfType1": "MainMission",
+    "OnShelfValue1List": [
+      1040103
+    ],
+    "LimitTimes": 1,
+    "ShopID": 359,
+    "ScheduleDataID": 10359008
+  },
+  {
     "GoodsID": 360001,
     "ItemID": 402033,
     "ItemCount": 1,
